# rendez_bot

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  config.template.json  pyproject.toml  rdv_visa.py  rdv_visa_Meurthe-et-Moselle.py  tox.ini
scripts/: create_config_file_template.py  test_telegram_bot.py
src/rendez_bot/: __init__.py  __main__.py
src/rendez_bot/bots/: bot_factory.py  generic_bot.py
src/rendez_bot/bots/city_implementation/: __init__.py  meurthe_et_moselle_54_bot.py  paris_75_bot.py  val_de_marne_94_bot.py
src/rendez_bot/config/: config.py
src/rendez_bot/telegram/: telegram_bot.py
src/rendez_bot/tools/: captcha_resolver.py
tests/unit/: test_rendez_bot_commands.py
